implemented filter and styling

--- a/src/app/components/camera-assignments/camera-assignments.component.html
+++ b/src/app/components/camera-assignments/camera-assignments.component.html
@@ -1,10 +1,18 @@
+<mat-spinner class="loading" diameter="40" *ngIf="loadingProcessCount > 0"></mat-spinner>
+<div class="title-container" fxLayout="row" fxLayoutAlign="center center">
+  <div class="title" fxLayout="column" fxLayoutAlign="center center" fxFlex>Manage Camera Assignments</div>
+</div>
 <div class="container" fxLayout="column">
-  <div class="title-container" fxLayout="row">
-    <div class="title" fxLayout="column" fxFlex>Camera Assignments</div>
+  <div class="filter-new" fxLayout="row">
+    <div fxLayout="column" fxFlex>
+      <mat-form-field>
+        <input matInput placeholder="Search by Camera Device # or Vehicle Name" (keyup)="onKey($event)" [(ngModel)]="searchValue">
+      </mat-form-field>
+    </div>
     <div class="new-assignment" fxLayout="column"><button mat-raised-button color="primary" (click)="newAssignment()">New Assignment</button></div>
   </div>
   <div class="data-container">
-    <table mat-table [dataSource]="assignments" class="mat-elevation-z8">
+    <table mat-table [dataSource]="filteredAssignments" class="mat-elevation-z8">
       <ng-container matColumnDef="cameraId">
         <th mat-header-cell *matHeaderCellDef> Camera Device # </th>
         <td mat-cell *matCellDef="let element"> {{getCamera(element.CameraId)?.DeviceNo}} </td>
