--- a/src/app/components/edit-assignment/edit-assignment.component.html
+++ b/src/app/components/edit-assignment/edit-assignment.component.html
@@ -1,3 +1,4 @@
+<mat-spinner class="loading" diameter="40" *ngIf="loadingProcessCount > 0"></mat-spinner>
 <div class="container">
   <div class="title">Edit Camera Assignment</div>
   <div fxLayout="row">
