--- a/src/app/components/edit-assignment/edit-assignment.component.scss
+++ b/src/app/components/edit-assignment/edit-assignment.component.scss
@@ -1,6 +1,16 @@
 @import '../../variables.scss';
 
 :host {
+    .loading {
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        margin: auto;
+        z-index: 100;
+    }
+    
     .container {
         .title {
             font-size: 20pt;
