--- a/src/app/components/new-assignment/new-assignment.component.html
+++ b/src/app/components/new-assignment/new-assignment.component.html
@@ -1,5 +1,6 @@
+<mat-spinner class="loading" diameter="40" *ngIf="loadingProcessCount > 0"></mat-spinner>
 <div class="container">
-  <div class="title">Create New Assignment</div>
+  <div class="title">Create Camera Assignment</div>
   <div fxLayout="row">
     <div class="text" fxLayout="column" fxLayoutAlign="center center">
       Associate
